--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,12 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+@import "bootstrap";
+
+body {font-size:14px;}
+.main-container {margin-top:30px;}
+.d-form-links {margin-top:15px;}
+.d-err-list {margin-bottom:0px;padding-left:15px;}
+.d-del-account {margin-top:30px;}
+.d-user-profile-data {margin-top:30px;}
