--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,35 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <%= link_to 'Главная', root_path, :class=>"nav-link" %>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbardrop" data-toggle="dropdown">
+                        Справочники
+                    </a>
+                    <div class="dropdown-menu">
+                        <%= link_to 'Муниципальные округа', municipalitys_path, :class=>"dropdown-item"  %>
+                        <%= link_to 'Потребители сервисов', consumers_path, :class=>"dropdown-item"  %>
+                        <%= link_to 'Владельцы сервисов', owners_path, :class=>"dropdown-item"  %>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbardrop" data-toggle="dropdown">
+                        Отчеты
+                    </a>
+                    <div class="dropdown-menu">
+                        <%= link_to 'Графический', municipalitys_path, :class=>"dropdown-item"  %>
+                        <%= link_to 'Табличный', municipalitys_path, :class=>"dropdown-item"  %>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
