--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,13 @@
         </div>
     </nav>
 
+    <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= value %>
+        </div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
