--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,24 +1,18 @@
 <div class="container-fluid mt-4">
     <div class="flex-row">
+
+<!--
+        <div class="col-12">
+            <select class="selectpicker" data-live-search="true" data-none-results-text="Ничего не найдено">
+                <option>Mustard</option>
+                <option>Ketchup</option>
+                <option>Barbecue</option>
+            </select>
+        </div>
+-->
         <div class="col-12">
 
             <% Interaction.import_files %>
-
-            <div class="col-12">
-                <p><strong>Владелец сервиса</strong></p>
-                <% it = Interaction.all.group(:serv_owner) %>
-                <% it.each do |o_name| %>
-                    <p><%= o_name.serv_owner %></p>
-                <% end %>
-            </div>
-
-            <div class="col-12">
-                <p><strong>Потребитель сервиса</strong></p>
-                <% it = Interaction.all.group(:serv_consumer) %>
-                <% it.each do |o_name| %>
-                    <p><%= o_name.serv_consumer %></p>
-                <% end %>
-            </div>
 
             <table class="table table-bordered table-responsive">
                 <thead>
@@ -40,10 +34,10 @@
             <tbody>
             <% @interactions.each do |row| %>
                 <tr>
-                    <td><%= row.serv_owner %></td>
+                    <td><%= row.owner.name %></td>
                     <td><%= row.serv_name %></td>
                     <td><%= row.serv_sid %></td>
-                    <td><%= row.serv_consumer %></td>
+                    <td><%= row.consumer.name %></td>
                     <td><%= row.serv_date.strftime('%d.%m.%Y') %></td>
                     <td><%= row.request_count %></td>
                     <td><%= row.response_count %></td>
