Начало табличного отчета

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                     </a>
                     <div class="dropdown-menu">
                         <%= link_to 'Графический', municipalitys_path, :class=>"dropdown-item"  %>
-                        <%= link_to 'Табличный', municipalitys_path, :class=>"dropdown-item"  %>
+                        <%= link_to 'Табличный', report_table_view_path, :class=>"dropdown-item"  %>
                     </div>
                 </li>
             </ul>
