--- a/app/views/reports/table_view.html.erb
+++ b/app/views/reports/table_view.html.erb
@@ -4,9 +4,36 @@
             <h1>Отчет по обращениям</h1>
         </div>
         <div class="col-12">
-            <% @result.each do |rez| %>
-                <p><%= rez[0] %>: <%= rez[1] %></p>
-            <% end %>
+            <div class="card mt-3">
+                <div class="card-header">
+                    <div class="body-panel-buttons">
+                        <%= form_tag report_table_view_path, :method => 'get' do %>
+                            <%= select_tag :q, options_from_collection_for_select(Owner.all, :id, :name, @selected_opt), class: "custom-select col-10", include_blank: 'Все' %>
+                            <%= submit_tag "Показать", :name => nil, :class => "btn btn btn-primary col-1" %>
+                        <% end %>
+
+                    </div>
+                </div>
+                <div class="card-body">
+                    <% if @result && @result.count > 0 %>
+                        <table class="table table-striped table-hover">
+                            <thead class="thead-dark">
+                                <tr><th>Муниципальный округ</th><th>Кол-во запросов</th></tr>
+                            </thead>
+                            <tbody>
+                                <% @result.each do |one_result| %>
+                                    <tr>
+                                        <td><%= one_result[0] %></td>
+                                        <td><%= one_result[1] %></td>
+                                    </tr>
+                                <% end %>
+                            </tbody>
+                        </table>
+                    <% else %>
+                        <p><h5 class="emptyData">Данные отсутствуют</h5></p>
+                    <% end %>
+                </div>
+            </div>
         </div>
     </div>
 </div>
