--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,5 @@ body {font-size:14px;}
 .d-err-list {margin-bottom:0px;padding-left:15px;}
 .d-del-account {margin-top:30px;}
 .d-user-profile-data {margin-top:30px;}
+.table-n-cell {width:60px;}
+.report-tooltip-header {margin-bottom:4px;}
