--- a/app/views/municipalitys/index.html.erb
+++ b/app/views/municipalitys/index.html.erb
@@ -16,12 +16,11 @@
                     <% if @municipalitys.count > 0 %>
                         <table class="table table-striped">
                             <thead class="thead-dark">
-                                <tr><th>id</th><th>Название</th><th>Кол-во МФЦ и ОМСУ</th><th>Поиск при импорте</th></tr>
+                                <tr><th>Название</th><th>Кол-во МФЦ и ОМСУ</th><th>Поиск при импорте</th></tr>
                             </thead>
                             <tbody>
                                 <% @municipalitys.each do |municipality| %>
                                     <tr>
-                                        <td><%= municipality.id %></td>
                                         <td><%= link_to municipality.name, edit_municipality_path(municipality) %></td>
                                         <td><%= municipality.consumers.count %></td>
                                         <td><%= municipality.filt_string %></td>
